openshift/custom-deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pbw-liberty-derby-demo
  name: pbw-liberty-derby-demo
  namespace: liberty-demo-pbw-custom-deploy
spec:
  port:
    targetPort: 9080-tcp
  to:
    kind: Service
    name: pbw-liberty-derby-demo
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
